--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
     <script src="../JavaScript/window.js"></script>
     <script>dragElement(document.getElementById("mydiv"));</script>
 </head>
-
+<div></div>
 <body background="../Images/windowsxp-hill.jpg" onload="startTime()">
 <br>
 <div class="Icon">
